@@ -15,9 +15,9 @@ import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.report.ReportNode;
 import com.powsybl.commons.test.PowsyblTestReportResourceBundle;
 import com.powsybl.commons.test.TestUtil;
+import com.powsybl.contingency.*;
 import com.powsybl.contingency.strategy.OperatorStrategy;
 import com.powsybl.contingency.strategy.condition.TrueCondition;
-import com.powsybl.contingency.*;
 import com.powsybl.contingency.violations.*;
 import com.powsybl.ieeecdf.converter.IeeeCdfNetworkFactory;
 import com.powsybl.iidm.criteria.AtLeastOneNominalVoltageCriterion;
@@ -52,7 +52,9 @@ import com.powsybl.openloadflow.network.impl.OlfThreeWindingsTransformerResult;
 import com.powsybl.openloadflow.sa.extensions.ContingencyLoadFlowParameters;
 import com.powsybl.openloadflow.util.LoadFlowAssert;
 import com.powsybl.openloadflow.util.report.PowsyblOpenLoadFlowReportResourceBundle;
-import com.powsybl.security.*;
+import com.powsybl.security.PostContingencyComputationStatus;
+import com.powsybl.security.SecurityAnalysisParameters;
+import com.powsybl.security.SecurityAnalysisResult;
 import com.powsybl.security.comparator.LimitViolationComparator;
 import com.powsybl.security.limitreduction.LimitReduction;
 import com.powsybl.security.monitor.StateMonitor;
@@ -70,6 +72,8 @@ import java.util.concurrent.CompletionException;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static com.powsybl.openloadflow.network.ZeroImpedanceNetworkFactory.createWith3BusesNonImpedantSubNetwork;
+import static com.powsybl.openloadflow.network.ZeroImpedanceNetworkFactory.createWithNonImpedantThreeWindingsTransformer;
 import static com.google.common.collect.testing.Helpers.assertEmpty;
 import static com.powsybl.openloadflow.network.ZeroImpedanceNetworkFactory.*;
 import static com.powsybl.openloadflow.util.LoadFlowAssert.*;
@@ -2024,7 +2028,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
     private AcLoadFlowResult buildTestAcLoadFlowResult(AcSolverStatus solverStatus, OuterLoopStatus outerLoopStatus) {
         LfNetwork lfNetwork = Mockito.mock(LfNetwork.class);
-        return new AcLoadFlowResult(lfNetwork, 0, 0, solverStatus, new OuterLoopResult("", outerLoopStatus), 0d, 0d);
+        return new AcLoadFlowResult(lfNetwork, 0, 0, solverStatus, new OuterLoopResult("", outerLoopStatus), Collections.singletonMap(0, 0d), Collections.singletonMap(0, 0d));
     }
 
     @Test
@@ -4014,7 +4018,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         // The report should be the same with one or two threads
         // Let's just check the size here
-        assertEquals(7396, reportString.length());
+        assertEquals(7318, reportString.length());
         // Check also that the preCont report is before the postContResults in the second CC
         String expected =
                 """
@@ -4315,30 +4319,30 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         LfNetworkList networks = new LfNetworkList(Networks.load(network, new LfNetworkParameters().setComponentMode(LoadFlowParameters.ComponentMode.ALL_CONNECTED)));
         assertEquals(2, networks.getList().size());
         assertEquals(0, networks.getList().get(0).getNumCC());
-        assertEquals(0, networks.getList().get(0).getNumSC());
+        assertEquals(0, networks.getList().get(0).getSynchronousNetworks().getFirst().getNumSC());
         assertEquals(0, networks.getList().get(1).getNumCC());
-        assertEquals(1, networks.getList().get(1).getNumSC());
+        assertEquals(1, networks.getList().get(1).getSynchronousNetworks().getFirst().getNumSC());
 
         // Main connected component mode and all connected component mode should yield same result
         List<LfNetwork> componentMainConnected = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ComponentMode.MAIN_CONNECTED);
         assertEquals(2, componentMainConnected.size());
         assertEquals(0, componentMainConnected.get(0).getNumCC());
-        assertEquals(0, componentMainConnected.get(0).getNumSC());
+        assertEquals(0, componentMainConnected.get(0).getSynchronousNetworks().getFirst().getNumSC());
         assertEquals(0, componentMainConnected.get(1).getNumCC());
-        assertEquals(1, componentMainConnected.get(1).getNumSC());
+        assertEquals(1, componentMainConnected.get(1).getSynchronousNetworks().getFirst().getNumSC());
 
         List<LfNetwork> componentAll = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ComponentMode.ALL_CONNECTED);
         assertEquals(2, componentAll.size());
         assertEquals(0, componentAll.get(0).getNumCC());
-        assertEquals(0, componentAll.get(0).getNumSC());
+        assertEquals(0, componentAll.get(0).getSynchronousNetworks().getFirst().getNumSC());
         assertEquals(0, componentAll.get(1).getNumCC());
-        assertEquals(1, componentAll.get(1).getNumSC());
+        assertEquals(1, componentAll.get(1).getSynchronousNetworks().getFirst().getNumSC());
 
         // Main synchronous component mode should return only one component
         List<LfNetwork> componentMainSynchronous = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ComponentMode.MAIN_SYNCHRONOUS);
         assertEquals(1, componentMainSynchronous.size());
         assertEquals(0, componentMainSynchronous.get(0).getNumCC());
-        assertEquals(0, componentMainSynchronous.get(0).getNumSC());
+        assertEquals(0, componentMainSynchronous.get(0).getSynchronousNetworks().getFirst().getNumSC());
     }
 
     @Test
@@ -4348,29 +4352,29 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(2, networks.getList().size());
 
         assertEquals(0, networks.getList().get(0).getNumCC());
-        assertEquals(0, networks.getList().get(0).getNumSC());
+        assertEquals(0, networks.getList().get(0).getSynchronousNetworks().getFirst().getNumSC());
         assertEquals(1, networks.getList().get(1).getNumCC());
-        assertEquals(1, networks.getList().get(1).getNumSC());
+        assertEquals(1, networks.getList().get(1).getSynchronousNetworks().getFirst().getNumSC());
 
         // Main connected component mode should only select component associated to main CC
         List<LfNetwork> componentMainConnected = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ComponentMode.MAIN_CONNECTED);
         assertEquals(1, componentMainConnected.size());
         assertEquals(0, componentMainConnected.get(0).getNumCC());
-        assertEquals(0, componentMainConnected.get(0).getNumSC());
+        assertEquals(0, componentMainConnected.get(0).getSynchronousNetworks().getFirst().getNumSC());
 
         // Main synchronous component mode returns the same because the main CC has one single SC
         List<LfNetwork> componentMainSynchronous = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ComponentMode.MAIN_SYNCHRONOUS);
         assertEquals(1, componentMainSynchronous.size());
         assertEquals(0, componentMainSynchronous.get(0).getNumCC());
-        assertEquals(0, componentMainSynchronous.get(0).getNumSC());
+        assertEquals(0, componentMainSynchronous.get(0).getSynchronousNetworks().getFirst().getNumSC());
 
         // All connected component mode should select all component
         List<LfNetwork> componentAll = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ComponentMode.ALL_CONNECTED);
         assertEquals(2, componentAll.size());
         assertEquals(0, componentAll.get(0).getNumCC());
-        assertEquals(0, componentAll.get(0).getNumSC());
+        assertEquals(0, componentAll.get(0).getSynchronousNetworks().getFirst().getNumSC());
         assertEquals(1, componentAll.get(1).getNumCC());
-        assertEquals(1, componentAll.get(1).getNumSC());
+        assertEquals(1, componentAll.get(1).getSynchronousNetworks().getFirst().getNumSC());
     }
 
     @Test
